# ai-trader

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  __main__.py  _alpaca_probe.py  pyproject.toml  requirements-dev.txt  requirements.txt  ts exchange-time override + enforce live safety gate
.github/workflows/: tests.yml
docs/: ALPACA_OPERATOR_CONSOLE_SMOKE_TEST.md  ARCHITECTURE.md  CHANGELOG.md  Fluff.txt
src/: __init__.py
src/app/: __init__.py  __main__.py  config.py  models.py  order_pipeline.py  reconciliation.py  state.py
src/broker/: __init__.py  base.py
src/data/: __init__.py  provider.py
src/risk/: __init__.py  manager.py
src/signals/: __init__.py  strategy.py
tests/: __init__.py  conftest.py  test_broker.py  test_cli.py  test_config.py  test_cost_features.py  test_credential_management.py  test_daily_loss_persistence.py  test_data.py  test_decision_logging.py  test_dry_run.py  test_live_trading_safety.py  test_main.py  test_models.py  test_order_management_cli.py  test_order_pipeline.py  test_phase_a.py  test_reconciliation.py  test_risk.py  test_risk_limits.py  test_session_loss.py  test_status.py  test_strategy.py  test_symbol_eligibility.py
tools/: alpaca.ps1
